chore: text changes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
-    <title>CS229: Machine Learning</title>
+    <title>Better CS229: Machine Learning</title>
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
@@ -889,12 +889,11 @@
                             </li>
                             <li>Octave resources: For a free alternative to Matlab, check out <a href="http://www.gnu.org/software/octave/">GNU
                                     Octave</a>. The official documentation is available <a
-                                    href="http://www.gnu.org/software/octave/doc/interpreter/">here</a>.
-                                Some useful tutorials on Octave include <a
-                                    href="http://en.wikibooks.org/wiki/Octave_Programming_Tutorial">http://en.wikibooks.org/wiki/Octave_Programming_Tutorial</a>
-                                and <a
-                                    href="http://www-mdp.eng.cam.ac.uk/web/CD/engapps/octave/octavetut.pdf">http://www-mdp.eng.cam.ac.uk/web/CD/engapps/octave/octavetut.pdf</a>
-                                .
+                                        href="http://www.gnu.org/software/octave/doc/interpreter/">here</a>. Some useful tutorials on Octave include <a
+                                        href="http://en.wikibooks.org/wiki/Octave_Programming_Tutorial">http://en.wikibooks.org/wiki/Octave_Programming_Tutorial</a>
+                                    and <a
+                                        href="http://www-mdp.eng.cam.ac.uk/web/CD/engapps/octave/octavetut.pdf">http://www-mdp.eng.cam.ac.uk/web/CD/engapps/octave/octavetut.pdf</a>
+                                    .
                                 <br>
                             </li>
                             <li>Data: Here is the <a href="http://www.ics.uci.edu/~mlearn/MLRepository.html">UCI Machine
